tests/errors/alias-1.ja
procedure foo(int x, int y)
    call bar(x, y)

procedure bar(int a, int b)
    a += b

procedure main()
    int x

    x += 5
    call foo(x, x)
